--- a/ymir/templates/rlhf_chat.html
+++ b/ymir/templates/rlhf_chat.html
@@ -1,5 +1,6 @@
 {% for message in chat_history %}
-<div class="chat-message {% if message.role == 'user' %}user-message{% else %}assistant-message{% endif %}">
+<div
+    class="chat-message {% if message.role == 'user' %}user-message{% else %}assistant-message{% endif %} hover-card transition duration-300 ease-in-out">
     {% if message.role == 'assistant' %}
     {% set content = message.content %}
     {% if "```think" in content %}
@@ -7,7 +8,7 @@
     {{ parts[0] | safe }}
     {% for part in parts[1:] %}
     {% set think_parts = part.split("```") %}
-    <div class="thinking-block">{{ think_parts[0] | safe }}</div>
+    <div class="thinking-block hover-card transition duration-300 ease-in-out">{{ think_parts[0] | safe }}</div>
     {{ think_parts[1] | safe if think_parts|length > 1 else "" }}
     {% endfor %}
     {% else %}
