--- a/ymir/templates/document_error.html
+++ b/ymir/templates/document_error.html
@@ -1,4 +1,4 @@
-<div class="bg-red-50 border-l-4 border-red-500 p-4 mb-6">
+<div class="bg-red-50 border-l-4 border-red-500 p-4 mb-6 hover-card transition duration-300 ease-in-out">
     <div class="flex">
         <div class="flex-shrink-0">
             <svg class="h-5 w-5 text-red-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
