--- a/ymir/templates/document_processing_results.html
+++ b/ymir/templates/document_processing_results.html
@@ -1,4 +1,4 @@
-<div class="bg-green-50 border-l-4 border-green-500 p-4 mb-6">
+<div class="bg-green-50 border-l-4 border-green-500 p-4 mb-6 hover-card transition duration-300 ease-in-out">
     <div class="flex">
         <div class="flex-shrink-0">
             <svg class="h-5 w-5 text-green-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
@@ -17,7 +17,8 @@
     </div>
 </div>
 
-<div class="bg-white rounded-lg shadow-md p-6 border border-gray-100 mb-6">
+<div
+    class="bg-white rounded-lg shadow-md p-6 border border-gray-100 mb-6 hover-card transition duration-300 ease-in-out">
     <h3 class="text-lg font-semibold mb-4">Processing Results</h3>
 
     {% if results.chapters_processed > 0 %}
