--- a/ymir/templates/document_toc_results.html
+++ b/ymir/templates/document_toc_results.html
@@ -1,4 +1,4 @@
-<div class="bg-green-50 border-l-4 border-green-500 p-4 mb-6">
+<div class="bg-green-50 border-l-4 border-green-500 p-4 mb-6 hover-card transition duration-300 ease-in-out">
     <div class="flex">
         <div class="flex-shrink-0">
             <svg class="h-5 w-5 text-green-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="overflow-x-auto">
+<div class="overflow-x-auto hover-card transition duration-300 ease-in-out">
     <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50">
             <tr>
